--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,52 @@
 body{
     font-family: 'Montserrat', sans-serif;
+    margin: 0;
+    padding: 0;
 }
+/* common css */
+h1{
+    font-size: 50px;
+}
+h2{
+    font-size: 40px;
+}
+p{
+   font-size: 20px; 
+   margin-bottom: 40px;
+}
+.container{
+    display: flex;
+    margin-bottom: 150px;
+} 
+
+/* header section start */
+
+.color{
+    color: orange;
+}
+.first-width{
+    width: 50%;
+    padding: 20px 40px;
+    margin-top: 40px;
+    margin-left: 10px;
+}
+.first-width img{
+    width: 95%;
+    height: 445px;
+}
+.link_btn{
+    background-image: linear-gradient(45deg,orange,tomato);
+    padding: 10px 20px;
+    border-radius: 20px 20px;
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+}
+/* header section end */
+/* about start */
+.about{
+    background-image: url(../images/shapes/7.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+/* about end */
